course3/GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: someGatewayClass
spec:
  controllerName: cilium
