course3/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  namespace: default
spec:
  containers:
  - name: example-application
    image: nginx:latest
    ports:
    - containerPort: 80
