course3/ClusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-deployment-clusterip-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
