course3/Loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-example-deployment-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
