course3/NodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-deployment-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
