course3/externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-internal
spec:
  type: ExternalName
  externalName: google.com
