course3/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-gateway
spec:
  gatewayClassName: someGatewayClass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
