course3/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-com-route
spec:
  parentRefs:
  - name: http-gateway
  rules:
  - matches:
    - path:
        type: Prefix
        value: /app
   backendRefs:
   - name: app-service
     port: 80
