course3/Ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
   ingressClassName: nginx/haproxy/...
   rules:
   - host: example.com
   http:
     paths:
     - path: /app1
       pathType: Prefix
       backend:
         service: example-deployment-service
         port:
           number: 80
  tls:
  - hosts:
    - example.com
    secretName: tls-secret
